--- a/Finances.Web/Finances.Web.csproj
+++ b/Finances.Web/Finances.Web.csproj
@@ -41,6 +41,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -59,6 +63,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Scripts\models.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Styles\app.css">
       <DependentUpon>app.less</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -100,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Content\Scripts\app.ts" />
+    <TypeScriptCompile Include="Content\Scripts\models.ts" />
     <TypeScriptCompile Include="Content\Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Content\Scripts\typings\knockout\knockout.d.ts" />
   </ItemGroup>
