--- a/Finances.Web/packages.config
+++ b/Finances.Web/packages.config
@@ -4,4 +4,5 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.4.0" targetFramework="net45" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="0.6.5" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
 </packages>
