--- a/Finances.Web/packages.config
+++ b/Finances.Web/packages.config
@@ -4,5 +4,8 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.4.0" targetFramework="net45" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="0.6.5" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Nancy" version="1.0.0" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="1.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
 </packages>
